# yew-datatable

./: CONTRIBUTING.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  deploy.yml  pages.yml
example/: Cargo.toml  index.html
example/src/: data.rs  main.rs
example/src/pages/: async_data.rs  column_features.rs  filtering.rs  full_demo.rs  mod.rs  pagination.rs  selection.rs  sorting.rs
scripts/: test-wasm.sh
yew-datatable/: Cargo.toml
yew-datatable-core/: Cargo.toml
yew-datatable-core/src/: lib.rs  prelude.rs
yew-datatable-core/src/column/: cell_context.rs  column_def.rs  column_def_builder.rs  column_id.rs  column_meta.rs  data_table_accessor.rs  data_table_dyn_accessor.rs  data_table_dyn_value.rs  header_context.rs  mod.rs  prelude.rs  sort_direction.rs
yew-datatable-core/src/features/: mod.rs
yew-datatable-core/src/features/aggregation/: aggregated_value.rs  aggregation_fn.rs  aggregation_state.rs  built_in_aggregation.rs  mod.rs  prelude.rs
yew-datatable-core/src/features/column_ordering/: column_ordering_state.rs  mod.rs  prelude.rs
yew-datatable-core/src/features/column_pinning/: column_pinning_position.rs  column_pinning_state.rs  mod.rs  prelude.rs
yew-datatable-core/src/features/column_sizing/: column_size.rs  column_sizing_mode.rs  column_sizing_state.rs  mod.rs  prelude.rs
yew-datatable-core/src/features/column_visibility/: column_visibility_state.rs  mod.rs  prelude.rs
yew-datatable-core/src/features/expanding/: expanding_state.rs  mod.rs  prelude.rs
yew-datatable-core/src/features/filtering/: built_in_filter.rs  column_filter.rs  filter_fn.rs  filter_state.rs  filter_value.rs  global_filter.rs  mod.rs  prelude.rs
yew-datatable-core/src/features/grouping/: grouping_state.rs  mod.rs  prelude.rs
yew-datatable-core/src/features/pagination/: mod.rs  pagination_mode.rs  pagination_state.rs  prelude.rs
yew-datatable-core/src/features/row_selection/: mod.rs  prelude.rs  row_selection_mode.rs  row_selection_state.rs
yew-datatable-core/src/features/sorting/: built_in_sorting.rs  mod.rs  natord.rs  prelude.rs  sort_direction.rs  sort_state.rs  sorting_fn.rs  sorting_state.rs
yew-datatable-core/src/row/: data_table_row.rs  data_table_row_id.rs  data_table_row_model.rs  mod.rs  prelude.rs
yew-datatable-core/src/state/: data_table_state.rs  data_table_state_builder.rs  mod.rs  prelude.rs
yew-datatable-core/src/table/: data_table.rs  data_table_options.rs  data_table_options_builder.rs  mod.rs  prelude.rs
yew-datatable-core/tests/: aggregation_tests.rs  column_ordering_tests.rs  column_pinning_tests.rs  column_sizing_tests.rs  column_visibility_tests.rs  expanding_tests.rs  filtering_tests.rs  pagination_tests.rs  row_selection_tests.rs  sorting_tests.rs  table_integration_tests.rs
yew-datatable/src/: lib.rs  prelude.rs
yew-datatable/src/components/: cell_render_context.rs  data_table.rs  mod.rs  pagination.rs  table_body.rs  table_header.rs
yew-datatable/src/hooks/: mod.rs  use_table.rs
yew-datatable/tests/: props_partial_eq_tests.rs  use_table_reactivity_tests.rs
