# Yew DataTable — Cargo Workspace
#
# A fully-featured, headless data table library for Yew applications,
# inspired by TanStack Table v8. The workspace contains the headless
# core engine, the Yew integration layer, and a demonstration example.

[workspace]

# Workspace resolver version for dependency unification.
resolver = "2"

# Workspace members: core engine, UI layer, and example application.
members = [
    "yew-datatable-core",
    "yew-datatable",
    "example",
]

# Shared package metadata inherited by all workspace members.
[workspace.package]

# Current release version.
version = "0.1.0"

# Rust edition for language and compiler features.
edition = "2024"

# Maintainers and organizational ownership.
authors = ["Hasni Mehdi <hasnimehdi@outlook.com>"]

# Open-source license.
license = "MIT"

# Source code repository.
repository = "https://github.com/Black-Cockpit/yew-datatable"

# Official project homepage.
homepage = "https://github.com/Black-Cockpit/yew-datatable"

# Minimum supported Rust version.
rust-version = "1.85"

# Shared workspace dependencies referenced by member crates.
[workspace.dependencies]

# Internal crate references.
# Both `path` (for local development) and `version` (for crates.io resolution)
# are specified so that `cargo publish` resolves the dependency from the registry
# while local builds use the workspace path.
yew-datatable-core = { path = "./yew-datatable-core", version = "0.1.0" }
yew-datatable = { path = "./yew-datatable", version = "0.1.0" }

# Yew framework for WebAssembly frontend development.
yew = { version = "0.23.0", features = ["csr"] }

# WebAssembly browser API bindings.
web-sys = "0.3"

# Rust-to-JavaScript interop layer for WebAssembly.
wasm-bindgen = "0.2.114"

# Gloo utilities for WebAssembly browser APIs.
gloo = "0.11.0"

# Serialization framework for encoding and decoding structured data.
serde = { version = "1.0.228", features = ["derive"] }

# JSON parser and serializer for structured data.
serde_json = "1.0.100"


# Deny warnings in clippy
[workspace.metadata]
clippy = { deny = ["warnings"] }
